...
    onSearch: () -> Unit = {},
    onToggleSearchActive: (Boolean) -> Unit = {},
    isActive: Boolean = true,
    isEnabled: Boolean = true,
    placeholder: String = "Search NYT Articles..."
) {
    SearchBar(
        modifier = modifier
            .testTag(tag = "SearchBar"),
        state = searchState,
        inputField = {
            SearchBarDefaults.InputField(
                query = query,
...
