...
        //TITlE
        Box(
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 10.dp), contentAlignment = Alignment.Center
        ) {
            Text(text = "App Settings", style = MaterialTheme.typography.titleLarge)
        }


        Row(
            modifier = Modifier
                .fillMaxWidth()
...
